syntax = "proto3";

import "google/protobuf/any.proto";

//option java_multiple_files = true;
option java_package = "com.liji.proxy.common.model";
option java_outer_classname = "MessageProto";

package message;


message Message {
    Header header = 1;
    google.protobuf.Any body = 2;
}

message Header {
    int64 timestamp = 1;
    int32 version = 2;
    string reqId = 3;
}

//以下都是messageBody的不同类型
message Authentication {
    string authSecret = 1;
}

message NewProxy {
    int32 proxyPort = 1;
    string localHost = 2;
    int32 localPort = 3;
}

message NewConnectionFromOuter {
    string localHost = 2;
    int32 localPort = 3;
}

message KeepAlive {

}

message Response {
    int32 status = 1;
    string msg = 2;
}